<resources>
    <string name="app_name">SimpleBluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="start_bluetooth">开启蓝牙</string>
    <string name="show_devices">查询配对设备</string>
    <string name="find_devices">搜索设备</string>
    <string name="connect_devices">连接设备</string>
    <string name="but1">照明模式</string>
    <string name="but2">特效模式</string>
    <string name="led1">打开白灯</string>
    <string name="led2">打开黄灯</string>
    <string name="led3">打开绿灯</string>
    <string name="led4">打开蓝灯</string>
    <string name="led5">打开红灯</string>
    <string name="text1">欢迎使用照明模式!</string>
    <string name="text3">欢迎使用特效模式!</string>
    <string name="text2">蓝灯亮度</string>
    <string name="text4">绿灯亮度</string>
    <string name="text5">黄灯亮度</string>
    <string name="text6">白灯亮度</string>
    <string name="text7">红灯亮度</string>
    <string name="texiao1">特效一</string>
    <string name="texiao2">特效二</string>
    <string name="texiao3">特效三</string>
    <string name="texiao4">特效四</string>
    <string name="texiao5">特效五</string>
    <string name="texiao6">特效六</string>
    <string name="texiao0">关闭特效</string>
</resources>
