<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd" >

    <Button
        android:id="@+id/button_showdevices"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/show_devices"
        />
    <Button
        android:id="@+id/button_startbluetooth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_showdevices"
        android:text="@string/start_bluetooth"
        />
    <Button
        android:id="@+id/button_connectdevices"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_startbluetooth"
        android:text="@string/connect_devices"
        />
</RelativeLayout>