<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/te_xiao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simpletestbluetoo.Texiao">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:id="@+id/Relativelayout2"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview3_1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/text3" />
        <TextView
            android:id="@+id/textview_3_2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_below="@id/textview3_1"
            android:text="Welcome" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout3_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout3_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3_01"
                android:text="@string/texiao1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button3_02"
                android:text="@string/texiao2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button3_03"
                android:text="@string/texiao3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout3_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3_04"
                android:text="@string/texiao4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button3_05"
                android:text="@string/texiao5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button3_06"
                android:text="@string/texiao6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollview3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Relativelayout2"
        android:layout_above="@id/layout3_"
        android:paddingTop="6dp">
        <TextView
            android:id="@+id/textview_receive3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout3_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/button3_00"
            android:text="@string/texiao0"
            android:layout_width="360dp"
            android:layout_height="wrap_content" />


    </LinearLayout>
</RelativeLayout>