<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zhao_ming"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="64dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.simpletestbluetoo.Zhaoming">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:id="@+id/Relativelayout2"
        android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/Relativelayout1"
    android:layout_height="match_parent">

    <SeekBar
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:progress="100"
        android:visibility="visible"
        android:id="@+id/seekBar6" />
    <TextView
        android:id="@+id/description4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar6"
        android:text="@string/text7" />
    <SeekBar
    android:layout_width="248dp"
    android:layout_height="wrap_content"
    android:max="100"
    android:layout_above="@+id/description4"
    android:layout_centerInParent="true"
    android:progress="100"
    android:visibility="visible"
    android:id="@+id/seekBar2" />
    <TextView
        android:id="@+id/description"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar2"
        android:text="@string/text2" />
    <SeekBar
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_above="@id/description"
        android:layout_centerInParent="true"
        android:progress="100"
        android:visibility="visible"
        android:id="@+id/seekBar3" />
    <TextView
        android:id="@+id/description1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar3"
        android:text="@string/text4" />
    <SeekBar
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_above="@id/description1"
        android:layout_centerInParent="true"
        android:progress="100"
        android:visibility="visible"
        android:id="@+id/seekBar4" />
    <TextView
        android:id="@+id/description2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar4"
        android:text="@string/text5" />
    <SeekBar
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_above="@id/description2"
        android:layout_centerInParent="true"
        android:progress="100"
        android:visibility="visible"
        android:id="@+id/seekBar5" />
    <TextView
        android:id="@+id/description3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar5"
        android:text="@string/text6" />

    <TextView
        android:id="@+id/textview2_1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/text1" />

    <TextView
        android:id="@+id/textview_2_2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_below="@id/textview2_1"
        android:text="Welcome" />


    <LinearLayout
        android:id="@+id/layout2_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview2_1"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2_01"
                android:text="@string/led1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button2_02"
                android:text="@string/led2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2_03"
                android:text="@string/led3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/button2_04"
                android:text="@string/led4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button2_05"
                android:text="@string/led5"
                android:layout_width="164dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:id="@+id/scrollview2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout2_"
        android:paddingTop="6dp">
        <TextView
            android:id="@+id/textview_receive2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>